# synchrotron

./: .gitignore  Cargo.toml  Dockerfile  README.md  cargo.toml  docker-compose.yml  gateway.Dockerfile  users.Dockerfile
api-gateway/: .env  Cargo.toml  Dockerfile
api-gateway/src/: errors.rs  lib.rs  main.rs
api-gateway/src/data/: mod.rs
api-gateway/src/data/anchor/: anchors_by_id.rs  anchors_by_page_id.rs  create_anchor.rs  delete_anchor.rs  mod.rs  page_anchors.rs
api-gateway/src/data/bookmark/: bookmarks_by_id.rs  create_bookmark.rs  delete_bookmark.rs  document_bookmarks.rs  mod.rs
api-gateway/src/data/document/: all_documents.rs  get_document_by_id.rs  mod.rs
api-gateway/src/data/page/: document_pages.rs  mod.rs  pages_by_id.rs
api-gateway/src/data/track/: document_tracks.rs  mod.rs  tracks_by_id.rs  update_track_title.rs
api-gateway/src/data/user/: all_users.rs  authenticate.rs  create_user.rs  get_user_by_id.rs  login.rs  mod.rs  update_user_role.rs  verify.rs
api-gateway/src/data/user_anchor/: create_user_anchor.rs  delete_user_anchor.rs  mod.rs  page_user_anchors.rs  user_anchors_by_id.rs  user_anchors_by_page_id.rs
api-gateway/src/entities/: anchor.rs  bookmark.rs  document.rs  mod.rs  page.rs  track.rs  user.rs  user_anchor.rs
api-gateway/src/graphql/: handler.rs  mod.rs  mutation.rs  query.rs  schema.rs
courses-service/: .env  Cargo.toml  Dockerfile
courses-service/migrations/: 20210216053219_initial.sql
courses-service/src/: errors.rs  main.rs
frontend/: .gitignore  Cargo.toml  build.rs  index.html
frontend/pkg/: index.html
frontend/src/: lib.rs  operations.graphql  operations.rs  operators.rs  subscription.rs
frontend/src/commands/: application.rs  authentication.rs  mod.rs  operations.graphql  operations.rs  routing.rs  ui.rs
frontend/src/effects/: mod.rs
frontend/src/messages/: application.rs  authentication.rs  mod.rs  routing.rs
frontend/src/messages/ui/: course.rs  mod.rs  register.rs
frontend/src/state/: authentication.rs  entities.rs  mod.rs  routing.rs
frontend/src/state/ui/: course_screen.rs  courses_screen.rs  login_screen.rs  mod.rs  register_screen.rs
frontend/src/view/: course.rs  courses.rs  login.rs  mod.rs  register.rs
schema/: Cargo.toml  build.rs
schema/protos/: courses.proto  shared.proto  users.proto
schema/src/: lib.rs
users-service/: .env  Cargo.toml  Dockerfile
users-service/migrations/: 20201029041716_initial.sql  20210214231705_user_role.sql
users-service/migrations/2020-10-17_init/: up.sql
users-service/src/: errors.rs  jwt.rs  main.rs
