[package]
name = "api-gateway"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2018"

[dependencies]
actix-files = "0.4.0"
actix-rt = "1.1.1"
actix-web = "3.1.0"
async-trait = "0.1.41"
chrono = "0.4.19"
dataloader = "0.12.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = { git = "https://github.com/graphql-rust/juniper" }
schema = { path = "../schema" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
structopt = "0.3.20"
tonic = "0.3"

[[bin]]
name = "api-gateway"
path = "src/main.rs"
