[package]
name = "frontend"
version = "0.1.0"
authors = ["nicksenger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", features = ["image", "debug"] }
env_logger = "0.8"
wasm-bindgen = "0.2.69"

[lib]
crate-type = ["cdylib"]
