[package]
name = "frontend"
version = "0.1.0"
authors = ["nicksenger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
graphql_client = "^0.9"
iced = { git = "https://github.com/hecrj/iced", features = ["image", "debug"] }
wasm-bindgen = "0.2.69"

[build-dependencies]
api-gateway = { path = "../api-gateway" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
serde_json = "^1"
syn = "=1.0.59"

[lib]
crate-type = ["cdylib"]
