[package]
name = "frontend"
version = "0.1.0"
authors = ["nicksenger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
futures = "^0.3.6"
graphql_client = "^0.9"
iced = { git = "https://github.com/hecrj/iced", features = ["image", "debug"] }
iced_futures = { git = "https://github.com/hecrj/iced" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[build-dependencies]
api-gateway = { path = "../api-gateway" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
serde_json = "^1"
syn = "=1.0.59"

[lib]
crate-type = ["cdylib"]
