[package]
name = "users-service"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
schema = { path = "../schema" }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.3"

[[bin]]
name = "users-service"
path = "src/main.rs"
